-------------------------------------------------------------------------------
Changes in version 1.007

- Fixed bug in iobuf/iobuf_init.c -- parameters to mmap happened to work
  on Linux but were completely bogus for portability.

- Switched the 64-bit CRC function to use the polynomial specified in
  the DLT1 spec (ECMA-182).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.006

- Added uint16, uint32, and uint64 pack/unpack functions.

- Added 32 and 64 bit CRC functions, and the Mersenne Twister random
  number generator.

- Changed the ipv4addr typedef to make explicit when it's being passed
  by reference.  This breaks source code compatibility with previous
  versions.

- Major internal reorganization moving many files into subdirectories.

- More portability fixes.

- Started working on adding Doxygen documentation to the sources.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.005

- Portability fixes for *BSD (possibly others).

- #define MSG_NO_DEBUG before including <msg/msg.h> and no debugging
  messages will be compiled into the object code.

- Added long long str_cat*ll and obuf_put*ll functions.

- Added str_match simple pattern-matching function.

- Fixed the shadowed global variable naming conflicts.

- Flattened out and simplified the installed lib files.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.003

- Optimized path matching to only stat intermediate entries if they
  don't contain any meta-characters, instead of reading the entire