@@ -7,6 +7,8 @@ Changes in version 1.007
 - Switched the 64-bit CRC function to use the polynomial specified in
   the DLT1 spec (ECMA-182).
 
+- Added (count 'em) three 16-bit CRC functions -- ARC, CCITT, and XMODEM.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
